fixed overlapping img onto caption

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,20 +66,17 @@ button[type=submit] {
 
 /* POST STYLES */
 
-ul {
-    list-style-type: none;
-}
-/*.post-container {
-    margin: 50px 300px 0;
-    border: 2px red solid;
-    height: 70vh;
-}*/
+
 ul {
     display: flex;
     padding-left: 0;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    list-style-type: none;
+}
+.img-post {
+    margin: 50px 0;
 }
 .username-post {
     margin-top: 50px;
@@ -90,9 +87,7 @@ ul {
   
 }
 .img-post {
-    margin-top: 1px;
-    height: 12vh;
-    width: 35vw;
+    margin: 20px 0;
 }
 img {
     height: auto;
@@ -118,13 +113,16 @@ input[type=submit] {
 }
 
 
-
-
 @media screen and (max-width: 580px) {
     .container, .post-container {
-        margin: 0
+        margin: 0 ;
     }
     .username-post {
         font-size: 4.5vw;
     }
+    .new-post-form{
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
